@@ -1,42 +1,0 @@
-{% extends "base_2col.html" %}
-{% load i18n %}
-
-{% block title %}{% trans "Resend the activation e-mail" %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block extrajs %}
-<script type="text/javascript">
-	$(function() {
-		$("#id_email").focus();
-		$("input[type='text']").addClass("text");
-	});
-</script>
-{% endblock %}
-
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
-{% block content %}
-	<form action="" method="post" accept-charset="utf-8">
-	<fieldset>
-		<legend>{% trans "Resend the activation e-mail" %}</legend>
-		<label for="id_email">{% trans 'E-mail address' %}</label>
-		<p>{{ form.email }}
-		{% if form.email.errors %}
-			<span class="quiet red"><br />* {{ form.email.errors|join:"; " }}</span>
-		{% endif %}
-		</p>
-		{% if form.non_field_errors %}
-			<ul class="quiet red">{{ form.non_field_errors.as_ul }}</ul>
-		{% endif %}
-	</fieldset>
-	<input type="submit" value="{% trans 'Resend validation' %}" />
-	</form>
-{% endblock %}
-
-{% block content-related %}
-	<div class="box">
-		<h4>{% trans "Enter your e-mail address and we'll resend the user activation e-mail to you" %}.</h4>
-	</div>
-{% endblock %}
