@@ -1,1 +1,0 @@
-{% load i18n %}{% blocktrans %}Password reset of your account on {{ site_name }}{% endblocktrans %}.
